--- a/async-workshop/css/theme/black.css
+++ b/async-workshop/css/theme/black.css
@@ -293,3 +293,10 @@ body {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+
+section .cols {
+  display: flex; }
+  section .cols > div {
+    width: 50%; }
+    section .cols > div ol {
+      font-size: 1.8rem; }
