--- a/async-workshop/css/theme/black.css
+++ b/async-workshop/css/theme/black.css
@@ -10,6 +10,9 @@ section.has-light-background, section.has-light-background h1, section.has-light
 .reveal code {
   font-family: Iosevka; }
 
+.reveal section code {
+  font-family: 'Overpass Mono'; }
+
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
@@ -18,7 +21,7 @@ body {
   background-color: #222; }
 
 .reveal {
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: "Overpass", Helvetica, sans-serif;
   font-size: 42px;
   font-weight: normal;
   color: #fff; }
@@ -49,7 +52,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #fff;
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: "Overpass", Helvetica, sans-serif;
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: normal;
