--- a/async-workshop/css/theme/black.css
+++ b/async-workshop/css/theme/black.css
@@ -303,3 +303,10 @@ section .cols {
     width: 50%; }
     section .cols > div ol {
       font-size: 1.8rem; }
+
+.reveal p > code {
+  box-shadow: inset 0 -0.55em 0 #0288D1;
+  padding: 0 0.5rem;
+  font-size: 0.9em;
+  display: inline-block;
+  font-weight: 400; }
