--- a/async-workshop/css/theme/source/black.scss
+++ b/async-workshop/css/theme/source/black.scss
@@ -68,3 +68,16 @@ section {
 
     }
 }
+
+.reveal {
+    p > code {
+        box-shadow: inset 0 -0.55em 0 #0288D1;
+        padding: 0 0.5rem;
+        font-size: 0.9em;
+        display: inline-block;
+        font-weight: 400;
+    }
+}
+
+code.github {
+}
