--- a/async-workshop/css/theme/black.css
+++ b/async-workshop/css/theme/black.css
@@ -305,7 +305,7 @@ section .cols {
       font-size: 1.8rem; }
 
 .reveal p > code {
-  box-shadow: inset 0 -0.55em 0 #0288D1;
+  background-color: #01579B;
   padding: 0 0.5rem;
   font-size: 0.9em;
   display: inline-block;
