--- a/async-workshop/css/theme/black.css
+++ b/async-workshop/css/theme/black.css
@@ -304,7 +304,7 @@ section .cols {
     section .cols > div ol {
       font-size: 1.8rem; }
 
-.reveal p > code {
+.reveal p code {
   background-color: #01579B;
   padding: 0 0.5rem;
   font-size: 0.9em;
