--- a/async-workshop/css/theme/source/black.scss
+++ b/async-workshop/css/theme/source/black.scss
@@ -70,7 +70,7 @@ section {
 }
 
 .reveal {
-    p > code {
+    p code {
         background-color: #01579B;
         padding: 0 0.5rem;
         font-size: 0.9em;
