--- a/async-workshop/css/theme/source/black.scss
+++ b/async-workshop/css/theme/source/black.scss
@@ -81,3 +81,15 @@ section {
 
 code.github {
 }
+
+.front-slide {
+    h2 {
+        text-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+    }
+
+    p {
+        display: inline-block;
+        padding: 0.1rem 0.9rem;
+        background: rgba(0, 0, 0, 0.8);
+    }
+}
